src/scss/themes/ng/body.scss
/* ... */
// Label: Multiline
.cui-label-multiline {
	// Conflict: makes it center vertically align in center
	// align-self: stretch;
	max-width: 100%; // prevent overflow when its the child of a flex parent
	display: flex;

	& + & {
		margin-top: 7px;
	}

	&:not(.cui-label-markdown) {
		> .cui-label-content {
			white-space: pre-wrap;
		}
	}

	.cui-label-content span {
		// white-space: normal;
		// white-space has to pre-wrap - otherwise it breaks the whole concept of a multiline label
		// example: collection description
	}
}

// Label: Manage Overflow

.cui-label-manage-overflow {
	position: relative;
	flex-direction: column;
	align-items: flex-end;

	&.cui-label--measure-overflow {
		> .cui-label-content {
			max-height: 8 * 18px; // only limit if its more than 8 lines
		}
	}

	> .cui-label-content {
		max-height: 6 * 18px; // limit at 6 lines
		overflow: hidden;
		-webkit-mask-image: linear-gradient(black calc(100% - 32px), transparent);
	}

	&.cui-label-size-mini { // 14px line-height
		&.cui-label--measure-overflow > .cui-label-content {
			max-height: 8 * 14px;
		}

		> .cui-label-content {
			max-height: 6 * 14px;
		}
	}

	.cui-label-manage-overflow-button {
		.cui-button-visual {
			color: var(--highlight);
			height: auto;
			padding: 0;
			line-height: inherit;
		}
	}

	&.cui-label--show-overflow {
		> .cui-label-content {
			max-height: none !important;
			overflow: visible;
			-webkit-mask-image: none;
		}
	}
}

// Label: Placeholder
.cui-empty-label {
	color: $muted-color;
	font-style: italic;
	margin: 0;
	cursor: default;

	.cui-label-content {
		display: inline-block;
	}
}

// Label: Centered
.cui-label-centered {
	flex: 1 1 auto;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: $padding;

	> .cui-label-content {
		text-align: center;
		flex-grow: 0;
	}
}


// Buttonbar
.cui-buttonbar {
	display: flex;
	align-items: center;
	// justify-content: space-between; CONFLICT: looks bad sometimes

	// > *:not(:last-child) {
	// 	margin-right: $gap;
	// }

	.cui-label {
		margin: 0 $small-gap;
		align-self: center;

		// CONFLICT: spacing needed around first/last labels
		// &:first-child {
		// 	margin-left: 0;
		// }

		// &:last-child {
		// 	margin-right: 0;
		// }
	}

	.cui-label-content {
		align-self: center; // Date-Time picker month label in footer
	}

	> .cui-button,
	> .cui-button-button,
	> .cui-data-field-input {
		+ .cui-button,
		+ .cui-button-button,
		+ .cui-data-field-input {
			margin-left: $padding;
		}
	}

	> .cui-button,
	> .cui-button-button,
	> .cui-data-field-input {
		+ .cui-buttonbar-group {
			margin-left: $padding/2;
		}
	}

	.cui-button-href {
		height: 100%;
	}

	.cui-buttonbar-group {
		+ .cui-button,
		+ .cui-button-href {
			margin-left: $padding/2;
		}
	}
}

// Buttonbar Group
.cui-buttonbar-group {
	display: flex;
	align-self: stretch; // use full height for bigger click area for buttons (example: tabs)
	max-width: 100%;

	> * {
		position: relative;
		align-self: stretch; // make sure that buttons are full height
		margin-left: -1px;

		.cui-button-visual,
		.cui-input {
			border-radius: 0;
		}

		&:first-child,
		&.cui-first-visible-child {
			margin-left: 0;

			.cui-button-visual,
			.cui-input {
				border-top-left-radius: $button-radius;
				border-bottom-left-radius: $button-radius;
			}

			&:before {
				display: none;
			}
		}

		&:last-child,
		&.cui-last-visible-child {
			.cui-button-visual,
			.cui-input {
				border-top-right-radius: $button-radius;
				border-bottom-right-radius: $button-radius;
			}
		}

		&.cui-active {
			z-index: 1;
		}
	}

	.cui-label {
		border: 1px solid $button-border;
		background: $foreground;
		margin-left: -1px;
		margin-right: 0;
		padding: 0 7px;
		color: $secondary-color;
		
		&.cui-label-appearance-transparent-border {
			border: none;
			margin-left: 1px;
			box-shadow: 0 0 0 1px hsla(0,0%,0%,.1);
			
			&.cui-label-size-mini {
				height: 18px;
			}
		}

		&-size-mini {
			height: 20px;
		}
	}

	> .cui-data-field {
		margin-left: -1px;

		&:first-child {
			margin-left: 0;
		}

		& + *:before {
			display: none;
		}
	}
}
/* ... */

